tests/NormalTests/paczka1/fuzzy1/46899227.err
Error in line 8: A808 S64 29,8
Error in line 16: JJyh4Ab S64 37,7
Error in line 17: JJyh4Ab A808 60,2
Error in line 14: A808 A808 41,5
Error in line 23: 0DxKprKulQ S566 78,4
Error in line 25: iySEBt S64 113,6
Error in line 21: A808 S64 25,8
Error in line 24: 0DxKprKulQ S134 73,1
Error in line 20: qTWQRb2ie9 S566 45,7
